# ticktape

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md  WIRE.md
.github/workflows/: ci.yml
crates/ticktape/: Cargo.toml
crates/ticktape-bench/: Cargo.toml
crates/ticktape-bench/src/: main.rs
crates/ticktape-cluster/: Cargo.toml
crates/ticktape-cluster/src/: commit.rs  election.rs  epoch.rs  lib.rs  net.rs  persist.rs
crates/ticktape-cluster/tests/: acceptor_persistence.rs  cluster_sim.rs  kill_the_leader.rs  multi_acceptor_crash_sim.rs  quorum_commit_sim.rs
crates/ticktape-codec/: Cargo.toml
crates/ticktape-codec/src/: lib.rs
crates/ticktape-core/: Cargo.toml
crates/ticktape-core/src/: codec.rs  crc32c.rs  frame.rs  lib.rs  seq.rs  service.rs
crates/ticktape-gateway/: Cargo.toml
crates/ticktape-gateway/src/: flow.rs  lib.rs  server.rs  wire.rs
crates/ticktape-journal/: Cargo.toml
crates/ticktape-journal/src/: iouring.rs  lib.rs  snapshot.rs  storage.rs
crates/ticktape-journal/tests/: iouring.rs
crates/ticktape-macros/: Cargo.toml
crates/ticktape-macros/src/: lib.rs
crates/ticktape-raft/: Cargo.toml
crates/ticktape-raft/src/: lib.rs  node.rs
crates/ticktape-raft/tests/: raft_backend.rs
crates/ticktape-runtime/: Cargo.toml
crates/ticktape-runtime/src/: lib.rs  timer.rs
crates/ticktape-runtime/tests/: node.rs  quorum_commit.rs  timers.rs
crates/ticktape-sbe/: Cargo.toml
crates/ticktape-sbe/src/: lib.rs
crates/ticktape-server/: Cargo.toml
crates/ticktape-server/src/: admin.rs  config.rs  lib.rs
crates/ticktape-server/tests/: admin.rs  auto_failover.rs  failover.rs
crates/ticktape-sim/: Cargo.toml
crates/ticktape-sim/src/: demo.rs  lib.rs  rng.rs  storage.rs
crates/ticktape-sim/tests/: harness.rs
crates/ticktape-transport/: Cargo.toml
crates/ticktape-transport/src/: lib.rs  net.rs  reassembler.rs  replica.rs  shm.rs  wire.rs
crates/ticktape-transport/tests/: fuzz_reassembly.rs  loopback.rs  store.rs
crates/ticktape/src/: lib.rs
docs/: GUIDE.md
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/exchange/: Cargo.toml
examples/exchange/src/: lib.rs  main.rs
examples/exchange/tests/: e2e.rs  fuzz.rs
examples/feed/: Cargo.toml
examples/feed/src/: main.rs
examples/kv/: Cargo.toml
examples/kv/src/: lib.rs  main.rs
examples/kv/tests/: crash_recovery.rs  fuzz.rs
examples/orderbook/: Cargo.toml
examples/orderbook/src/: lib.rs  main.rs
examples/orderbook/tests/: fuzz.rs  gtd.rs  matching.rs
