[workspace]
resolver = "2"
members = [
    "crates/ticktape-core",
    "crates/ticktape-codec",
    "crates/ticktape-macros",
    "crates/ticktape-journal",
    "crates/ticktape-runtime",
    "crates/ticktape-sim",
    "crates/ticktape-transport",
    "crates/ticktape-cluster",
    "crates/ticktape",
    "examples/counter",
    "examples/kv",
    "examples/orderbook",
    "examples/feed",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthart1983/ticktape"
rust-version = "1.85"

[workspace.dependencies]
ticktape-core = { path = "crates/ticktape-core" }
ticktape-codec = { path = "crates/ticktape-codec" }
ticktape-macros = { path = "crates/ticktape-macros" }
ticktape-journal = { path = "crates/ticktape-journal" }
ticktape-runtime = { path = "crates/ticktape-runtime" }
ticktape-sim = { path = "crates/ticktape-sim" }
ticktape-transport = { path = "crates/ticktape-transport" }
ticktape-cluster = { path = "crates/ticktape-cluster" }
ticktape = { path = "crates/ticktape" }

[profile.release]
lto = "thin"
codegen-units = 1
