[workspace]
resolver = "2"
members = [
    "crates/ticktape-core",
    "crates/ticktape-codec",
    "crates/ticktape-macros",
    "crates/ticktape-journal",
    "crates/ticktape-runtime",
    "crates/ticktape-sim",
    "crates/ticktape-transport",
    "crates/ticktape-cluster",
    "crates/ticktape-server",
    "crates/ticktape-gateway",
    "crates/ticktape-sbe",
    "crates/ticktape-raft",
    "crates/ticktape-bench",
    "crates/ticktape",
    "examples/counter",
    "examples/kv",
    "examples/orderbook",
    "examples/feed",
    "examples/exchange",
]

[workspace.package]
version = "0.20.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthart1983/ticktape"
rust-version = "1.85"

[workspace.dependencies]
ticktape-core = { path = "crates/ticktape-core" }
ticktape-codec = { path = "crates/ticktape-codec" }
ticktape-macros = { path = "crates/ticktape-macros" }
ticktape-journal = { path = "crates/ticktape-journal" }
ticktape-runtime = { path = "crates/ticktape-runtime" }
ticktape-sim = { path = "crates/ticktape-sim" }
ticktape-transport = { path = "crates/ticktape-transport" }
ticktape-cluster = { path = "crates/ticktape-cluster" }
ticktape-server = { path = "crates/ticktape-server" }
ticktape-gateway = { path = "crates/ticktape-gateway" }
ticktape-sbe = { path = "crates/ticktape-sbe" }
ticktape-raft = { path = "crates/ticktape-raft" }
ticktape = { path = "crates/ticktape" }

[profile.release]
lto = "thin"
codegen-units = 1
