[workspace]
resolver = "2"
members = [
    "crates/ticktape-core",
    "crates/ticktape-codec",
    "crates/ticktape-macros",
    "crates/ticktape-journal",
    "crates/ticktape-runtime",
    "crates/ticktape-sim",
    "crates/ticktape-transport",
    "crates/ticktape-cluster",
    "crates/ticktape-server",
    "crates/ticktape-gateway",
    "crates/ticktape-sbe",
    "crates/ticktape-raft",
    "crates/ticktape-bench",
    "crates/ticktape",
    "examples/counter",
    "examples/kv",
    "examples/orderbook",
    "examples/feed",
    "examples/exchange",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matthart1983/ticktape"
rust-version = "1.85"

[workspace.dependencies]
ticktape-core = { path = "crates/ticktape-core", version = "1.0.0" }
ticktape-codec = { path = "crates/ticktape-codec", version = "1.0.0" }
ticktape-macros = { path = "crates/ticktape-macros", version = "1.0.0" }
ticktape-journal = { path = "crates/ticktape-journal", version = "1.0.0" }
ticktape-runtime = { path = "crates/ticktape-runtime", version = "1.0.0" }
ticktape-sim = { path = "crates/ticktape-sim", version = "1.0.0" }
ticktape-transport = { path = "crates/ticktape-transport", version = "1.0.0" }
ticktape-cluster = { path = "crates/ticktape-cluster", version = "1.0.0" }
ticktape-server = { path = "crates/ticktape-server", version = "1.0.0" }
ticktape-gateway = { path = "crates/ticktape-gateway", version = "1.0.0" }
ticktape-sbe = { path = "crates/ticktape-sbe", version = "1.0.0" }
ticktape-raft = { path = "crates/ticktape-raft", version = "1.0.0" }
ticktape = { path = "crates/ticktape", version = "1.0.0" }

[profile.release]
lto = "thin"
codegen-units = 1
