[package]
name = "ticktape-cluster"
description = "Replication tiers for Ticktape: epoch-lease leader election, fencing, and quorum commit — the failover machinery, verified under deterministic simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ticktape-core.workspace = true
ticktape-transport.workspace = true
ticktape-journal.workspace = true

[dev-dependencies]
ticktape-sim.workspace = true
ticktape-codec.workspace = true
tempfile = "3"
