[package]
name = "ticktape-macros"
description = "Derive macros for Ticktape's canonical fixed-layout codec (#[derive(Encode, Decode)])"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive"] }
