[package]
name = "ticktape-sbe"
description = "SBE (Simple Binary Encoding) interop adapter for Ticktape: SBE-framed message payloads over the canonical fixed tier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ticktape-core.workspace = true
