[package]
name = "ticktape-server"
description = "Packaged replicated Ticktape server: a sequencer node + follower replicas + acceptor, with operator-driven promotion (manual failover)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ticktape-core.workspace = true
ticktape-journal.workspace = true
ticktape-runtime.workspace = true
ticktape-transport.workspace = true
ticktape-cluster.workspace = true

[dev-dependencies]
ticktape-sim.workspace = true
tempfile = "3"
